todo components added

--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>React Boilerplate</title>
+	<title>Simple To-Do With React</title>
 	<link rel="stylesheet" type="text/css" href="./public/styles/style.css">
 </head>
 <body>
+	<div class="topTest">
+	</div>
 	<div id="app">
 	</div>
 	<script src="./public/scripts/app.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 </body>
 </html>
