--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 	<div class="container">
 		<div class="row">
-			<div class="app-container col-xs-12 col-sm-8 col-sm-offset-2">
+			<div class="app-container col-xs-12 col-md-8 col-md-offset-2">
 				<div id="app">
 				</div>
 			</div>
